finished the complete styling of the site on mobile using termux native and made the necessary changes. Still working on the responsiveness as i am having issues with my javascript

--- a/style.css
+++ b/style.css
@@ -268,3 +268,234 @@ section {
   border-radius: 0.5em;
 }
 
+#contact {
+  background-color: var(--second-background);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+
+form .input-box {
+  display: flex;
+  align-items: baseline;
+  gap: 1em;
+}
+
+form .input-box span {
+  font-size: 1.5em;
+  display: block;
+}
+
+form input {
+  padding: 1em 3em;
+  border: none;
+  border-radius: 0.5em;
+  font-size: 1.3em;
+  outline: none;
+}
+
+form input:focus {
+  background-color: rgb(229, 229, 229);
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background);
+  gap: 10em;
+  width: 100%;
+  bottom: 0;
+  padding: 5em 15%;
+}
+
+.col-left {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.col-box {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.col-box i {
+  font-size: 2em;
+}
+
+.col-box span {
+  font-size: 1.3em;
+}
+
+.col-right {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  gap: 1em;
+  max-width: 500px;
+}
+
+.col-right span {
+  font-size: 1.3em;
+}
+
+.col-right .social-icons {
+  display: flex;
+  align-items: baseline;
+  justify-content: baseline;
+  gap: 1em;
+}
+
+.col-right .social-icons i {
+  font-size: 2em;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.social-icons i:hover {
+  color: #fff;
+}
+
+/* responsiveness */
+
+@media(max-width: 968px) {
+
+  section {
+    padding: 8em 15%;
+  }
+
+  nav .btn {
+    display: none;
+  }
+
+  #menu {
+    display: block;
+  }
+
+  .links {
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    right: 0;
+    padding: 1em 3em;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+  }
+
+  .links a {
+    margin: 2em;
+    color: #fff;
+    display: block;
+    font-size: 1.5em;
+  }
+
+  .links.active {
+    display: block;
+  }
+
+  #home h1{
+    font-size: 4em;
+  }
+
+  #home h2{
+    font-size: 2em;
+  }
+
+  #home img{
+    width: 24vw;
+  }
+
+  #about{
+    flex-direction: column;
+  }
+
+  #about img{
+    width: 32ve;
+  }
+
+  #about h1{
+    font-size: 3em;
+  }
+
+  #about ul{
+    font-size: 1em;
+  }
+
+
+
+}
+
+
+@media(max-width: 768px) {
+  
+  #home h1{
+    font-size: 2.5em;
+  }
+
+  #home h3{
+    font-size: 1.5em;
+  }
+
+  #home img{
+    width: 32vw;
+  }
+
+  #about .skills{
+    gap: 3em;
+  }
+
+  
+  #services {
+    flex-direction: column;
+  }
+
+  #services .header{
+    font-size: 3em;
+  }
+
+  #contact .header{
+    font-size: 3em;
+  }
+
+  #contact .input-box span {
+    font-size: 1.2em;
+  }
+  .input-box input {
+    padding: 0.5em 1em;
+  }
+
+  footer {
+    flex-direction: column;
+    gap: 5em;
+    align-items: baseline;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
